k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-backend
  template:
    metadata:
      labels:
        app: java-backend
    spec:
      containers:
      - name: java-backend
        image: 195275640451.dkr.ecr.ap-south-1.amazonaws.com/java-tomcat-backend
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: java-backend
spec:
  selector:
    app: java-backend
  ports:
    - port: 8080
      targetPort: 8080
